backend/server_run.txt
C:\Users\DELL\OneDrive\Desktop\completed Projects\Photo-book\backend\src\repositories\implementation\PackageRepository.ts:3
import { BookingPackageModel, IBookingPackage } from "../../models/booking.model.ts";
         ^
SyntaxError: The requested module '../../models/booking.model.ts' does not provide an export named 'BookingPackageModel'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:689:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.9.0
